Source/istio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scoring
  labels:
    app: scoring
spec:
  ports:
  - port: 80 
    targetPort: 3000
    protocol: TCP
  selector:
    app: scoring-app
